# WorkFiles

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: PLAN.md  REMAINING-WORK.md  REVIEW.md  index.html  review-findings.json
engagements/: authorized_signers  example.yaml  whitebox-first.example.yaml
harness/: __init__.py  assets.py  budget.py  cli.py  engagement.py  mcp_external.py  orchestrator.py
harness/hooks/: __init__.py  audit_writer.py  scope_guard.py  telemetry.py
harness/ledger/: verify.py
harness/subagents/: analyst.md  exploiter.md  whitebox.md
harness/tools/: __init__.py  _sdk_shim.py  cloud.py  network.py  recon.py  report.py
redteam/: __init__.py  assets.py  auth.py  cli.py  engagement.py  jira.py  mcp_external.py  orchestrator.py  preflight.py
redteam/hooks/: audit_writer.py  redactor.py  scope_guard.py  telemetry.py
redteam/ledger/: __init__.py  chain.py  kms_seal.py  verify.py
redteam/pipeline/: __init__.py  cvss.py  cwe.py  emit.py  llm.py  load.py  models.py  stages.py
tests/: conftest.py  test_assets_mount.py  test_dockerfile_rt16.py  test_engagement_schema.py  test_external_mcp_allowlist.py  test_fixes_rt01_08.py  test_fixes_rt09_15.py  test_fixes_rt23.py  test_jira.py  test_kms_seal.py  test_kms_sealer_switch.py  test_ledger_chain.py  test_m0_doctor.py  test_m1_audit_dir_sarif.py  test_m1_cage.py  test_m1_cli_failclosed.py  test_m1_engagement.py  test_m1_report.py  test_m1_tool_sdk_contract.py  test_m3_chain.py  test_m3_cli_triage.py  test_m3_cvss.py  test_m3_cwe.py  test_m3_emit.py  test_m3_hardening.py  test_m3_llm.py  test_m3_load.py  test_m3_model_routing.py  test_m3_models.py  test_m3_priority.py  test_m3_run_triage_model.py  test_m3_semantic_dedup.py  test_m3_stages.py  test_m3_verify.py  test_otel_provisioning.py  test_recon_gh.py  test_report_jira.py  test_rt22_telemetry.py  test_scope_guard.py  test_signature_verify.py  (+2 more)
(+26 files in other folders)
