[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redteam"
version = "0.1.0"
description = "Modular security testing harness on the Claude Agent SDK"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "pydantic>=2.6",
    "email-validator>=2.0",
    "pyyaml>=6.0",
    "cryptography>=42.0",
    "boto3>=1.34",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
    "anyio>=4.3",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
recon-extras = [
    "shodan>=1.31",
]

[project.scripts]
redteam = "redteam.cli:main"
redteam-verify = "redteam.ledger.verify:main"

[tool.setuptools.packages.find]
include = ["redteam*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
